log/build_2024-10-09_21-38-08/line_follow/stderr.log
  File "/home/jason/gxs/GXS_2024_VisionCode/install/line_follow/lib/python3.10/site-packages/line_follow/line_follow.py", line 109
    =
    ^
SyntaxError: invalid syntax

